test_src/compiler_errors/parser_errors/LexerError.b
class LexerError {
    void foo() {
        println(`0);
    }
}
